changed font style and removed hyperlinks in project.js; need to fix the spacing for about me

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,13 +1,11 @@
-
 .my-5 {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+  font-family: 'Press Start 2P', 'cursive';
+    font-size: 15px;
     color: #010081;
-    font-weight: bold;
   }
   
   h1#about {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Press Start 2P', 'cursive';
     font-size: 30px;
     color: #010081;
     font-weight: bold;
