--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,18 +1,17 @@
 .contact {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 35px;
-        color: #010081;
-        font-weight: bold;
+    font-family: 'Press Start 2P', 'cursive';
+    font-size: 30px;
+    color: #010081;
+    padding: 20px;
       }
 
  .contact-container {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 25px;
+    font-family: 'Press Start 2P', 'cursive';
+    font-size: 15px;
     color: #010081;
-
     margin: 0 auto;
     width: 500px;
-    padding: 10px;
+    padding: 12px;
     border: 5px solid #010081;
     border-radius: 20px;
   }
