--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,12 +1,11 @@
 header {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Press Start 2P', 'cursive';
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 15px;
   text-align: center;
   background-color: 
   #008080; 
