--- a/src/components/styles/Resume.css
+++ b/src/components/styles/Resume.css
@@ -1,13 +1,13 @@
 h1 {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Press Start 2P', 'cursive';
     font-size: 30px;
     color: #010081;
     font-weight: bold;
 }
 
 .front, .back, .resume {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    font-family: 'Press Start 2P', 'cursive';
+    font-size: 13px;
     color: #010081;
     font-weight: bold;
 }
@@ -18,20 +18,21 @@ h1 {
   }
   
   .back {
-    margin-top: 25px;
+    margin-top: 30px;
   }
   
 
 .resume-heading {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Press Start 2P', 'cursive';
     font-size: 30px;
     color: #010081;
     font-weight: bold;
+    padding: 20px;
     }
 
 .download {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 18px;
+    font-family: 'Press Start 2P', 'cursive';
+    font-size: 13px;
     color: #010081;
     }
 
